--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -159,7 +159,7 @@
             console.log(theDate);
         </script>
 
-<form class="large-12 columns addShow ui-widget" action="/parseJSON" method="post">
+<form style="margin-top: -25px;" class="large-12 columns addShow ui-widget" action="/parseJSON" method="post">
     <input placeholder="Show Title" class="addInput" id="tags" name="title">
     <input placeholder="Season" class="addInput" name="season">
     <input placeholder="Episode #" class="addInput" name="episode">
