--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,7 @@ body#dummybodyid {
 }
 
 body{
-    background-color: #0d0d0d;
+    background-color: #141414;
     background-repeat: repeat;
     color: white;
 }
@@ -147,7 +147,6 @@ ul.topnav li a:hover{
     border: 1px solid #cacaca;
     color: whitesmoke;
     padding: 4px;
-    width: 50%;
     border: none;
     height: 40px;
     border-radius: 2px;
@@ -235,10 +234,6 @@ ul.topnav li a:hover{
 }
 
 
-h4{
-    text-align: center;
-}
-
 #seasonTitle{
   font-weight: bolder;
 }
@@ -251,6 +246,10 @@ h4{
 
 .addShow{
     color: black;
+}
+
+.addInput{
+    height: 2.4375rem !important;
 }
 
 
@@ -314,49 +313,36 @@ span.ui-helper-hidden-accessible{
 #update{
   width:10%;
   margin-top: 10px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   display: inline;
 
 }
 
-#showTile{
-}
-
 .bubble{
-    border-radius: 6px;
     background-color: #171717;
     border: 1px solid #cacaca;
     padding:30px;
     margin: 10px;
-    height: 55%;
-    width: 35%;
-    -webkit-box-shadow: 0 8px 6px -6px black;
-    -moz-box-shadow: 0 8px 6px -6px black;
-    box-shadow: 0 8px 6px -6px black;
-}
-
-.showContent{
-    text-align:center;
+    border-radius: 5px;
+    align: center;
 
 }
 
-#showInfoButton{
-    margin-left: 25%;
-}
 
 /* Show Info Page */
 
 
 .img-container {
-    width: 200px;
+    width: 400px;
     height: 800px;
     display: inline-block;
-    overflow: hidden;
 }
 
 .img-container img {
-    width: 100%;
+    margin-left: 35%;
+
 }
+
 
 
 /* Display Friends */
@@ -367,9 +353,7 @@ span.ui-helper-hidden-accessible{
     padding:30px;
     margin: 10px;
     height: 25%;
-    -webkit-box-shadow: 0 8px 6px -6px black;
-    -moz-box-shadow: 0 8px 6px -6px black;
-    box-shadow: 0 8px 6px -6px black;
+
 }
 
 #addFriendButton{
@@ -402,7 +386,7 @@ span.ui-helper-hidden-accessible{
 
 
 .badgeText{
-  color: #0d0d0d;
+  color: #141414;
   padding: 25px;
   font-size: 18px;
   text-align: center;
@@ -410,12 +394,6 @@ span.ui-helper-hidden-accessible{
   top: 70px;
   left: 65px;
   width: 65%;
-}
-
-.badgeForm{
-    -webkit-box-shadow: 0 8px 6px -6px black;
-    -moz-box-shadow: 0 8px 6px -6px black;
-    box-shadow: 0 8px 6px -6px black;
 }
 
 .iBadge{
