--- a/templates/shows.html
+++ b/templates/shows.html
@@ -1,10 +1,10 @@
 {%include 'nav.html'%}
 
 
-<form style="color:black;" class="large-12 columns" action="/updateShow" method="post">
-    <p><label for="title"></label></p><input style="line-height:none;" placeholder="Show Title" id="title" name="title" title="Only use this form for updating shows you are already following.">
-    <input style="line-height:none;" placeholder="Season" name="season">
-    <input style="line-height:none;" placeholder="Episode #" name="episode">
+<form style="color:black; margin-top: -25px;" class="large-12 columns" action="/updateShow" method="post">
+    <p><label for="title"></label></p><input class="addInput" placeholder="Show Title" id="title" name="title" title="Only use this form for updating shows you are already following.">
+    <input class="addInput" placeholder="Season" name="season">
+    <input class="addInput" placeholder="Episode #" name="episode">
     <input id="update" class="submit" type="submit" value="Update Show">
 
 </form>
@@ -29,19 +29,15 @@
 
 
 
-  <form class="large-4 columns bubble"  action="/showInfo" method="post">
-    <br>
+  <form class="large-3 columns bubble"  action="/showInfo" method="post">
     <h4 class="showContent">{{show[0]}}</h4>
-    <h5 class="showContent" >"{{show[1]}}"</h5>
-    <p class="showContent" id="seasonTitle">Season: {{show[2]}}</p>
-    <p class="showContent">Episode: {{show[3]}}</p>
-    <p class="showContent">Total Season Episodes: {{show[4]}}</p>
+    <p class="showContent" id="seasonTitle">Season {{show[2]}}, Episode {{show[3]}}</p>
       <input name="showName" style="display:none;" value="{{show[0]}}">
       <input name="season" style="display:none;" value="{{show[2]}}">
       <input name="currentEpisode" style="display:none;" value="{{show[3]}}">
       <input name="lastEpisode" style="display:none;" value="{{show[4]}}">
     <input name="random" style="display:none;" value="{{show[0]}}">
-    <input id="showInfoButton" class="submit" type="submit" value="View Show Info">
+    <input id="showInfoButton" class="submit" type="submit" value="{{show[1]}}">
 </form>
 
 
