--- a/templates/addedNotification.html
+++ b/templates/addedNotification.html
@@ -9,5 +9,5 @@
 
     <p class="showContent">This show has been added to the list of series you follow.</p>
 
-    <p class="showContent">You can view your shows in the My Shows section or by clicking <a href="/shows">here</a></p>
+    <p class="showContent">You can view your shows in the My Shows section or by clicking <a class="clickable" href="/shows">here</a></p>
 </div>
