--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                 <p id="poster2Txt">Keep track of all your favorite shows.</p>
                 <img class="loginPoster" id="poster3" src="http://img.omdbapi.com/?i=tt0773262&h=350&apikey=e24fb313">
                 <p id="poster3Txt">Earn badges and learn about your favorite shows.</p>
-                <a id="joinTxt" href="/newUser">Become a Watcher now!</a>
+                <a id="joinTxt" class="clickable" href="/newUser">Become a Watcher now!</a>
             </div>
         <a style="display:none;" href="/newUser">Sign Up!</a>
     <!--<img src="http://img.omdbapi.com/?i=tt1520211&h=520&apikey=e24fb313">-->
