--- a/templates/nav.html
+++ b/templates/nav.html
@@ -16,6 +16,9 @@
         <script src="../static/js/moment.min.js"></script>
         <script src="../static/js/foundation.min.js"></script>
         <script src="../static/js/modernizr.js"></script>
+        <script src="../static/js/time.js"></script>
+        <script src="../static/js/pngLib.js"></script>
+
 
 
  <style type="text/less">
