--- a/templates/usernameError.html
+++ b/templates/usernameError.html
@@ -1,3 +1,3 @@
 {%include 'nav.html'%}
 <h3 class="medium-12 columns header">Looks like that username has already been taken</h3>
-<a class="medium-2 columns"  href="/newUser">Back to the register page</a>
+<a class="medium-2 columns clickable"  href="/newUser">Back to the register page</a>
