--- a/templates/manageFriends.html
+++ b/templates/manageFriends.html
@@ -1,5 +1,5 @@
 {%include 'nav.html'%}
-<a href="/friends" class="medium-12 columns" style="font-size:20px;">Done Managing</a>
+<a href="/friends" class="medium-12 columns clickable" style="font-size:20px;">Done Managing</a>
 {%for data in data%}
 <form class="friendBubble medium-2 columns" action="/deleteFriends" method="post">
     <br>
