--- a/templates/newUserWelcome.html
+++ b/templates/newUserWelcome.html
@@ -18,6 +18,6 @@
         </nav>
 <h2 class="header">Welcome to the Watchers</h2>
 
-<p>Return to the <a href="/login">login screen</a> to login and begin following shows.</p>
+<p>Return to the <a class="clickable" href="/login">login screen</a> to login and begin following shows.</p>
 
 {%include 'footer.html'%}
