--- a/templates/shows.html
+++ b/templates/shows.html
@@ -24,6 +24,12 @@
                 $('.radial-progress').attr('data-progress', Math.floor(showProgress));
     });
     </script>
+    <script>
+
+             window.onload = function() {
+               document.getElementById('time').value = getTime();
+             }
+        </script>
 
 
 
@@ -37,6 +43,8 @@
       <input name="currentEpisode" style="display:none;" value="{{show[3]}}">
       <input name="lastEpisode" style="display:none;" value="{{show[4]}}">
     <input name="random" style="display:none;" value="{{show[0]}}">
+    <input style="display:none;" id="time" name="time" type="text">
+
     <input id="showInfoButton" class="submit" type="submit" value="{{show[1]}}">
 </form>
 
