--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -264,9 +264,7 @@
         .jssora22r.jssora22rdn { background-position: -310px -31px; }
     </style>
 
-
-
-    <div id="jssor_1" style="position: relative; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
+      <div id="jssor_1" style="position: relative; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
@@ -275,25 +273,19 @@
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
             <div data-p="225.00" style="display: none;">
                 <img data-u="image" src="../static/images/preacher2.jpg" />
+                <div style="font-family: 'Gill Sans'; background: #4a4a4a; position: absolute; top: 20px; width: 500px; height: 40px; font-size: 30px; color: #ffffff; line-height: 38px;">A Vertigo Comics original comes to TV!</div>
             </div>
             <div data-p="225.00" style="display: none;">
                 <img data-u="image" src="../static/images/got2.jpg" />
+                <div style="font-family: 'Gill Sans'; background: #4a4a4a; position: absolute; top: 430px; width: 440px; height: 40px; font-size: 30px; color: #ffffff; line-height: 38px;">Game of Thrones Season 6 is here!</div>
             </div>
             <div data-p="225.00" style="display: none;">
                 <img data-u="image" src="../static/images/bloodline.png" />
+                <div style="font-family: 'Gill Sans'; background: #4a4a4a; position: absolute; top: 430px; width: 340px; height: 40px; font-size: 30px; color: #ffffff; line-height: 38px;">Season 2 begins May 27th!</div>
+
             </div>
             <a data-u="ad" href="http://www.jssor.com" style="display:none">jQuery Slider</a>
 
-        </div>
-        <!-- Bullet Navigator -->
-        <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
-            <!-- bullet navigator item prototype -->
-            <div data-u="prototype" style="width:16px;height:16px;"></div>
-        </div>
-        <!-- Arrow Navigator -->
-        <span data-u="arrowleft" class="jssora22l" style="top:0px;left:12px;width:40px;height:58px;" data-autocenter="2"></span>
-        <span data-u="arrowright" class="jssora22r" style="top:0px;right:12px;width:40px;height:58px;" data-autocenter="2"></span>
-    </div>
 
     <!-- #endregion Jssor Slider End -->
 
