Final Styles, Comments, Cleanup

--- a/templates/addUserform.html
+++ b/templates/addUserform.html
@@ -1,3 +1,5 @@
+<!-- New User Registration -->
+
 <html>
 <head>
     <title>Welcome, Watchers</title>
@@ -8,13 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
     <link href="../../static/styles.css" rel="stylesheet">
-    <script src="js/main.js"></script>
-    <script src="../static/js/pngLib.js"></script>
-    <script>
-        var data = new Identicon('hash', 420).toString();
-        document.write('<img width=420 height=420 src="data:image/png;base64,' + data + '">');
 
-    </script>
 </head>
 <body style="background-color: black; font-family: 'Walkway Semibold';">
         <nav>
@@ -24,16 +20,24 @@
 
         </nav>
 
-        <div class="large-12 columns">
+        <div id="welcome" class="large-12 columns">
         <h2 class="header">So you want to join the Watchers?</h2>
         <p class="oathTxt">Being a Watcher is a serious mantle to bear. But if you think you're ready, sign your oath below.</p>
-    </div>
-    <form action="/addUser" class="large-4 columns" method="post">
-        <p class="oathTxt">I,</p><input placeholder="username" type="text" name="newUser" style="display:inline;">
-        <p class="oathTxt">Swear to uphold the values of the Watchers. To never willfully give away spoilers to fellow Watchers and to never play phone games while a new episode is airing.</p>
-        <p class="oathTxt"> Now, choose the secret pass code that will allow you entrance to the Watcher's fortress.</p>
-        <input placeholder="password" type="text" name="newPassword" style="display:inline;">
-        <p class="oathTxt">With these solumn words spoken, begin your watch, no matter what you choose to watch.</p>
-        <input value="Take your oath" class="submit" type="submit" style="display:inline;">
+        </div>
+    <form action="/addUser" class="large-12 columns" method="post">
+        <div class="large-5 columns oath">
+            <p class="oathTxt">I,</p>
+            <input class="registerInput" placeholder="username" type="text" name="newUser" style="display:inline;">
+            <p class="oathTxt">Swear to never willfully give away spoilers to fellow Watchers and to never play on my phone while a new episode is airing.</p>
+        </div>
+        <div class="large-5 columns oath">
+            <p class="oathTxt"> Now, choose the password that will allow you access inside. </p>
+            <input class="registerInput" placeholder="password" type="text" name="newPassword" style="display:inline;">
+            <p class="oathTxt">With these solumn words spoken, begin your watch, no matter what you choose to watch.</p>
+        </div>
+        <div style="text-align:center;" class="large-12 columns">
+            <input value="Take your oath" id="takeOath" class="submit" type="submit" style="display:inline; margin-top: 25px;
+">
+        </div>
     </form>
 
