--- a/templates/emptyBadgePage.html
+++ b/templates/emptyBadgePage.html
@@ -1,3 +1,5 @@
+<!-- page displays when user has collected no badges  -->
+
 {%include 'nav.html'%}
 
-<p>You dont have any badges yet, go out there and start following some shows and earn them!</p>
+<p class="large-12 columns" style="font-size: 25px;">You dont have any badges yet, go out there and start following some shows and earn them!</p>
