--- a/templates/error.html
+++ b/templates/error.html
@@ -3,5 +3,5 @@
     <ul>
         <li>Misspelled the title of a show</li>
         <li>Entered a season or episode number that does not exist in that series</li>
-        <li>Tried to follow a user that does not exist</li>
+        <li>Trued to update a show you are not following</li>
     </ul>
