--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,6 @@
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body style="background-color: #0d0d0d; font-family: 'Walkway Semibold';">
         <nav>
@@ -20,7 +19,7 @@
                 <input class="loginInput login" placeholder="username" type="text" name="username">
 
                 <input class="loginInput login" placeholder="password" type="password" name="password">
-                <input value="Log In"  class="submit login" type="submit">
+                <input style="color:white;" value="Log In"  class="submit login" type="submit">
             </form>
             <div class="large-9 columns">
                 <img class="loginPoster" id="poster1" src="http://img.omdbapi.com/?i=tt0903747&h=350&apikey=e24fb313">
