--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -2,6 +2,7 @@
 
     <script type="text/javascript" src="../static/js/jssor.slider.mini.js"></script>
 
+<!-- Autocomplete possible shows  -->
 <script>
           $(function() {
             var availableTags = [
@@ -149,6 +150,8 @@
              }
         </script>
 
+
+<!-- Add Shows Form -->
 <form style="margin-top: -25px;" class="large-12 columns addShow ui-widget" action="/parseJSON" method="post">
     <input placeholder="Show Title" class="addInput" id="tags" name="title">
     <input placeholder="Season" class="addInput" name="season">
@@ -156,7 +159,7 @@
     <input style="display:none;" id="time" name="time" type="text">
     <input id="searchSubmit" class="submit" type="submit" value="Add Show">
 </form>
-
+<!-- Jssor slide script -->
   <script>
         jQuery(document).ready(function ($) {
 
@@ -209,7 +212,7 @@
             //responsive code end
         });
     </script>
-
+<!-- Jssor slider styles  -->
     <style>
 
         /* jssor slider bullet navigator skin 05 css */
@@ -263,7 +266,7 @@
         .jssora22l.jssora22ldn { background-position: -250px -31px; }
         .jssora22r.jssora22rdn { background-position: -310px -31px; }
     </style>
-
+<!-- Jssor Slider -->
       <div id="jssor_1" style="position: relative; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -287,7 +290,7 @@
             <a data-u="ad" href="http://www.jssor.com" style="display:none">jQuery Slider</a>
 
 
-    <!-- #endregion Jssor Slider End -->
+    <!--  Jssor Slider End -->
 
 
 
