--- a/templates/usernameError.html
+++ b/templates/usernameError.html
@@ -1,3 +1,7 @@
-{%include 'nav.html'%}
+<nav class="large-12 columns">
+             <ul class="topnav">
+           <h1><a class="header" id="sw" href="/login">Watchers</a></h1>
+        </ul>
+<!-- Error Page for username related errors -->
 <h3 class="medium-12 columns header">Looks like that username has already been taken</h3>
 <a class="medium-2 columns clickable"  href="/newUser">Back to the register page</a>
