--- a/static/styles.css
+++ b/static/styles.css
@@ -27,7 +27,9 @@ p, input, a{
 
 .clickable{
     color:#57c7ff;
+
 }
+
 
 
 /* Error Page */
@@ -128,8 +130,26 @@ ul.topnav li a:hover{
 
 /* ##############  User Registration   ################# */
 
+#welcome{
+    text-align: center;
+    border-bottom: 1px solid white;
+    margin-bottom: 25px;
+}
+
+.oath{
+    margin-left: 6%;
+}
+
 .oathTxt{
     font-size: 20px;
+}
+
+.registerInput{
+    width: 40%;
+}
+
+#takeOath{
+    width: 20%;
 }
 
 /* */
@@ -137,6 +157,7 @@ ul.topnav li a:hover{
 
 #showAdded{
     font-size: 25px;
+    text-align: center;
 
 }
 
@@ -150,7 +171,7 @@ ul.topnav li a:hover{
 .submit {
     background-color: #454545;
     border: 1px solid #cacaca;
-    color: whitesmoke;
+    color:#57c7ff;
     padding: 4px;
     border: none;
     height: 40px;
@@ -231,25 +252,30 @@ ul.topnav li a:hover{
 }
 
 #feedScroll{
-
+    margin-left: auto;
+    margin-righ: auto;
 }
 
-#friendDataHome{
-    background-color: #171717;
+.friendDataHome{
+    background-color: #141414;
     border: none;
     font-size: 25px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.friendRec{
+    background-color: #141414;
+    border: none;
+    font-size: 25px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .showContent{
     margin: 3px;
     padding: 0;
 }
-
-
-#seasonTitle{
-}
-
-
 
 
 /* Add Shows Form */
@@ -266,6 +292,7 @@ ul.topnav li a:hover{
 #searchSubmit{
         width: 10%;
         margin-top: 2%;
+        color: white;
     }
 
 .callTxt{
@@ -325,11 +352,12 @@ span.ui-helper-hidden-accessible{
   margin-top: 10px;
   margin-bottom: 10px;
   display: inline;
+  color: white;
 
 }
 
 .bubble{
-    background-color: #171717;
+    background-color: #212121;
     border: 1px solid #cacaca;
     padding:30px;
     margin: 10px;
@@ -353,13 +381,17 @@ span.ui-helper-hidden-accessible{
 
 }
 
+.showInfo{
+    padding: 0;
+}
+
 
 
 /* Display Friends */
 
 .friendBubble{
-    border: 1px solid #cacaca;
-    border-radius: 6px;
+    background-color: #141414;
+    border-right: 1px solid #cacaca;
     padding:30px;
     margin: 10px;
 
@@ -498,9 +530,43 @@ span.ui-helper-hidden-accessible{
         padding: 5px;
     }
     #sw{
-        display: none;
+        font-size: 20px;
+        margin-top: 4px;
+    }
+    .feed{
+        width: 90%;
     }
 
+    #myShows{
+    margin-top: 5px;
+    }
+
+    #addShows{
+    margin-top: 5px;
+    }
+
+
+
+    #friendsNav{
+    margin-top: 5px;
+    }
+
+    #badgeNav{
+    margin-top: 5px;
+    }
+
+
+
+    #logout{
+    margin-top: 5px;
+    }
+
+    .addInput{
+        margin-top: 5px
+    }
+    iframe{
+        margin-left: 0%;
+    }
 }
 
 
@@ -531,6 +597,10 @@ span.ui-helper-hidden-accessible{
         padding: 1px;
 
     }
+    .feed{
+        width: 90%;
+    }
+
 
 }
 
