--- a/templates/newUserWelcome.html
+++ b/templates/newUserWelcome.html
@@ -7,17 +7,20 @@
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
-    <script src="js/main.js"></script>
 </head>
-<body style="background-color: #0d0d0d; font-family: 'Walkway Semibold'; color:white;">
-        <nav>
+<body style="background-color: #0d0d0d; font-family: 'Gill Sans'; color:white;">
+        <nav class="large-12 columns">
              <ul class="topnav">
            <h1><a class="header" id="sw" href="/login">Watchers</a></h1>
         </ul>
 
         </nav>
-<h2 class="header">Welcome to the Watchers</h2>
+        <div style="text-align: center;" class="large-12 columns">
+            <h2 class="large-12 columns header">Welcome to the Watchers</h2>
 
-<p>Return to the <a class="clickable" href="/login">login screen</a> to login and begin following shows.</p>
-
+            <p class="large-12 columns">Enjoy this welcome video, then return to the <a class="clickable" href="/login">login screen</a> to login and begin following shows.</p>
+        </div>
+        <div class="large-12 columns">
+            <iframe style="margin-left: 20%;"  width="820" height="715" src="https://www.youtube.com/embed/2CH-E_c9SbE" frameborder="0" allowfullscreen></iframe>
+        </div>
 {%include 'footer.html'%}
