--- a/templates/showInfo.html
+++ b/templates/showInfo.html
@@ -5,7 +5,7 @@
 
 {%for show in showdata %}
 
-
+<!-- Radial Javascript -->
 
      <script type="text/javascript">
 
@@ -27,14 +27,14 @@
 
   <form class="large-6 columns badgeForm" action="deleteShow" method="post">
     <br>
-    <h4 class="showContent">{{show[0]}}</h4>
-    <h5 class="showContent">"{{show[1]}}"</h5>
-    <p class="showContent" id="seasonTitle">Season {{show[2]}}, Episode {{show[3]}} </p>
-    <p class="showContent">Total Season Episodes: {{show[4]}}</p>
+    <h4 class="showInfo">{{show[0]}}</h4>
+    <h5 class="showInfo">"{{show[1]}}"</h5>
+    <p class="showInfo" id="seasonTitle">Season {{show[2]}}, Episode {{show[3]}} </p>
+    <p class="showInfo">Total Season Episodes: {{show[4]}}</p>
     <p>Plot Summary: {{show[5]}}</p>
     <p>Air Date: {{show[7]}}</p>
 
-    <h5>Progress in Season:</h5>
+    <h5 style="font-size: 25px;">Progress in Season:</h5>
     <div class="radial-progress" data-progress="0">
 	<div class="circle">
 		<div class="mask full">
